--- a/css/screen.css
+++ b/css/screen.css
@@ -266,11 +266,11 @@ a:focus {
 /* Horizontal alignment modifiers*/
 
 .o-layout--justify-start {
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .o-layout--justify-end {
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .o-layout--justify-center {
@@ -288,19 +288,19 @@ a:focus {
 /* Vertical item alignment modifiers */
 
 .o-layout--align-start {
-  align-self: flex-start;
+  align-items: flex-start;
 }
 
 .o-layout--align-end {
-  align-self: flex-start;
+  align-items: flex-end;
 }
 
 .o-layout--align-center {
-  align-self: center;
+  align-items: center;
 }
 
 .o-layout--align-baseline {
-  align-self: baseline;
+  align-items: baseline;
 }
 
 /* Vertical content alignment modifiers. Only work if there is one than one flex item */
@@ -445,21 +445,185 @@ a:focus {
 
 @media (min-width: 576px) {
   .u-1-of-2-bp1 {
+    flex-basis: 50% !important;
+  }
+
+  .u-1-of-3-bp1 {
+    flex-basis: calc(100% / 3) !important;
+  }
+
+  .u-2-of-3-bp1 {
+    flex-basis: calc(100% / 3 * 2) !important;
+  }
+
+  .u-1-of-4-bp1 {
+    flex-basis: 25% !important;
+  }
+
+  .u-3-of-4-bp1 {
+    flex-basis: 75% !important;
+  }
+
+  .u-1-of-5-bp1 {
+    flex-basis: 20% !important;
+  }
+
+  .u-2-of-5-bp1 {
+    flex-basis: 40% !important;
+  }
+
+  .u-3-of-5-bp1 {
+    flex-basis: 60% !important;
+  }
+
+  .u-4-of-5-bp1 {
+    flex-basis: 80% !important;
+  }
+
+  .u-1-of-6-bp1 {
+    flex-basis: calc(100% / 6) !important;
+  }
+
+  .u-5-of-6-bp1 {
+    flex-basis: calc(100% / 6 * 5) !important;
   }
 }
 
 @media (min-width: 768px) {
   .u-1-of-2-bp2 {
+    flex-basis: 50% !important;
+  }
+
+  .u-1-of-3-bp2 {
+    flex-basis: calc(100% / 3) !important;
+  }
+
+  .u-2-of-3-bp2 {
+    flex-basis: calc(100% / 3 * 2) !important;
+  }
+
+  .u-1-of-4-bp2 {
+    flex-basis: 25% !important;
+  }
+
+  .u-3-of-4-bp2 {
+    flex-basis: 75% !important;
+  }
+
+  .u-1-of-5-bp2 {
+    flex-basis: 20% !important;
+  }
+
+  .u-2-of-5-bp2 {
+    flex-basis: 40% !important;
+  }
+
+  .u-3-of-5-bp2 {
+    flex-basis: 60% !important;
+  }
+
+  .u-4-of-5-bp2 {
+    flex-basis: 80% !important;
+  }
+
+  .u-1-of-6-bp2 {
+    flex-basis: calc(100% / 6) !important;
+  }
+
+  .u-5-of-6-bp2 {
+    flex-basis: calc(100% / 6 * 5) !important;
   }
 }
 
 @media (min-width: 992px) {
   .u-1-of-2-bp3 {
+    flex-basis: 50% !important;
+  }
+
+  .u-1-of-3-bp3 {
+    flex-basis: calc(100% / 3) !important;
+  }
+
+  .u-2-of-3-bp3 {
+    flex-basis: calc(100% / 3 * 2) !important;
+  }
+
+  .u-1-of-4-bp3 {
+    flex-basis: 25% !important;
+  }
+
+  .u-3-of-4-bp3 {
+    flex-basis: 75% !important;
+  }
+
+  .u-1-of-5-bp3 {
+    flex-basis: 20% !important;
+  }
+
+  .u-2-of-5-bp3 {
+    flex-basis: 40% !important;
+  }
+
+  .u-3-of-5-bp3 {
+    flex-basis: 60% !important;
+  }
+
+  .u-4-of-5-bp3 {
+    flex-basis: 80% !important;
+  }
+
+  .u-1-of-6-bp3 {
+    flex-basis: calc(100% / 6) !important;
+  }
+
+  .u-5-of-6-bp3 {
+    flex-basis: calc(100% / 6 * 5) !important;
   }
 }
 
 @media (min-width: 1200px) {
   .u-1-of-2-bp4 {
+    flex-basis: 50% !important;
+  }
+
+  .u-1-of-3-bp4 {
+    flex-basis: calc(100% / 3) !important;
+  }
+
+  .u-2-of-3-bp4 {
+    flex-basis: calc(100% / 3 * 2) !important;
+  }
+
+  .u-1-of-4-bp4 {
+    flex-basis: 25% !important;
+  }
+
+  .u-3-of-4-bp4 {
+    flex-basis: 75% !important;
+  }
+
+  .u-1-of-5-bp4 {
+    flex-basis: 20% !important;
+  }
+
+  .u-2-of-5-bp4 {
+    flex-basis: 40% !important;
+  }
+
+  .u-3-of-5-bp4 {
+    flex-basis: 60% !important;
+  }
+
+  .u-4-of-5-bp4 {
+    flex-basis: 80% !important;
+  }
+
+  .u-1-of-6-bp4 {
+    flex-basis: calc(100% / 6) !important;
+  }
+
+  .u-5-of-6-bp4 {
+    flex-basis: calc(100% / 6 * 5) !important;
   }
 }
 
